# AISTANK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: humanoid16.xml
bindings/csharp/: Aistank.csproj  AistankNative.cs  HumanoidEnvironment.cs  PpoTrainer.cs  TrainWalking.cs
docs/: ARCHITECTURE.md
editor/: AistankEditor.csproj  App.xaml  App.xaml.cs  Backends.cs  MainWindow.xaml  MainWindow.xaml.cs  Scene3D.cs
include/: aistank.h
mjx/: README.md  arena.py  imitation.py  requirements.txt  run_overnight.sh  run_pipeline.sh  run_soccer.sh  soccer_env.py  soccer_scene.py  train_arena.py  train_humanoid.py  train_overnight.py  train_soccer.py
samples/TrainWalking/: Parity.cs  Program.cs  TrainWalking.csproj
shaders/: AgentShaders.hlsl  TrainShaders.hlsl
src/: AistankApi.cpp  EngineCore.cpp  EngineCore.h  GpuBuffers.h  GpuTrainer.cpp  GpuTrainer.h  SimulationLoop.cpp  SimulationLoop.h
